syntax = "proto3";

package pb;
option go_package = "./pb";

// 登录请求
message loginRequest {
  string Username = 1;
  string Password = 2;
}

// 登录响应
message loginResponse {
  string Token = 1;
  int64 Expire = 2;
}

service Public {
  // 通过密码登录
  rpc LoginByPassword(stream loginRequest) returns (stream loginResponse);
}
